# evaluation-of-iot-traffic

./: .gitignore  AnalisesResultados.ipynb  AnomalyFilter.ipynb  DataExploration.ipynb  FeatureAnalysis.ipynb  README.md  TesteHipoteses.ipynb  TrafficClassification.ipynb  features_df-no-clean.csv  features_df.csv  select_cols.csv
code/: create-datasets.sh  dataset-cleaner.py  generate-experiment-ds.py  parameters.json  run_classification.py
code/evaluation-iot-traffic-pipeline/: setup.cfg
code/evaluation-iot-traffic-pipeline/tcc_traffic_analysis/: __init__.py
code/evaluation-iot-traffic-pipeline/tcc_traffic_analysis/classification/: __init__.py  _classification_pipeline.py  _run_classifiers.py
code/evaluation-iot-traffic-pipeline/tcc_traffic_analysis/custom_algorithms/: __init__.py  _custom_algorithm.py  _manual_feature_selection.py
code/evaluation-iot-traffic-pipeline/tcc_traffic_analysis/datasets/: __init__.py  _custom_dataset.py  _xy_dataset_return.py
code/evaluation-iot-traffic-pipeline/tcc_traffic_analysis/testing/: __init__.py  _test_pipeline.py
code/script-pcap-prep/: create-datasets.sh  filter-iot.sh  merge-iot-devices-CSVs.sh  merge-iot-devices-ds.py  merge_anom.py  move_one_place.py
resultados/: resultado_experimento_1-90-03-07-2021.csv  resultado_experimento_1-90-04-07-2021.csv
resultados/experimento-1/: resultado_experimento_1-90-22-05-2021.csv
resultados/experimento-2/: only-ng-base.csv  only-ng-nrm.csv  resultado_experimento_2-100-25-07-2021.csv  resultado_experimento_2-90-23-05-2021.csv  resultado_experimento_2_base_hip-90-04-07-2021.csv  (+4 more)
(+4 files in other folders)
