[metadata]
name = evaluation-iot-traffic-pipeline
version = 0.0.1
author = Adriano Araújo Martins de Resende
author_email = adrianoaraujomr@gmail.com
description = A custom classification pipeline
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adrianoaraujomr/evaluation-iot-traffic
project_urls =
    Bug Tracker = https://github.com/adrianoaraujomr/evaluation-iot-traffic
classifiers = 
    Programming Language :: Python :: 3 
    License :: OSI Approved :: MIT License 
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6 
 
